# django-generic-plus

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  pytest.ini  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
generic_plus/: __init__.py  compat.py  fields.py  models.py  utils.py
generic_plus/curation/: fields.py  forms.py  widgets.py
generic_plus/forms/: __init__.py  widgets.py
generic_plus/patch/: __init__.py  utils.py
generic_plus/templates/generic_plus/: custom_field.html  inline.html
generic_plus/tests/: admin.py  conftest.py  fields.py  models.py  settings.py  test_models.py  urls.py
generic_plus/tests/test_curation/: admin.py  models.py  test_generic_curation.py  urls.py
generic_plus/tests/test_filefield/: models.py  test_models.py  urls.py
