[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=75.3.2"]

[project]
name = "django-generic-plus"
dynamic = ["version"]
description = "Django model field that combines the functionality of GenericForeignKey and FileField"
readme = "README.rst"
license = { text = "BSD-2-Clause" }
requires-python = ">=3"
authors = [
    { name = "The Atlantic", email = "programmers@theatlantic.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "python-monkey-business>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/theatlantic/django-generic-plus"

[tool.setuptools]
zip-safe = false
platforms = ["any"]
include-package-data = true

[tool.setuptools.packages.find]
include = ["generic_plus*"]
namespaces = false

[tool.setuptools.dynamic]
version = { attr = "generic_plus.__version__" }
readme = { file = ["README.rst"] }
